日志调整，新增 enable_mods 配置项
