# internal/adapter/tmodloader/model.go
@@ -10,11 +10,12 @@ type Mod struct {
 }
 
 type ServerConfig struct {
-	AutoCreate int    `json:"auto_create" binding:"oneof=1 2 3"`
-	Difficulty int    `json:"difficulty" binding:"oneof=0 1 2 3"`
-	MaxPlayers int    `json:"max_players" binding:"gt=0"`
-	Password   string `json:"password"`
-	Port       int    `json:"port" binding:"gte=1,lte=65535"`
-	Seed       string `json:"seed"`
-	WorldName  string `json:"world_name"`
+	AutoCreate int      `json:"auto_create" binding:"oneof=1 2 3"`
+	Difficulty int      `json:"difficulty" binding:"oneof=0 1 2 3"`
+	MaxPlayers int      `json:"max_players" binding:"gt=0"`
+	Password   string   `json:"password"`
+	Port       int      `json:"port" binding:"gte=1,lte=65535"`
+	Seed       string   `json:"seed"`
+	WorldName  string   `json:"world_name"`
+	EnableMods []string `json:"enable_mods"`
 }
